@@ -277,19 +277,20 @@ protected:
   bool dismissible_;
 };
 
+typedef Spell_String_Element Name;
+typedef Spell_String_Element Description;
+typedef Spell_Base_Element Range;
+typedef Spell_Base_Element Casting_Time;
+
 class Spell
 {
 public:
   Spell();
-  /*Spell( const std::string&, const School&, const Level&,
-	 const Spell_Base_Element&, const Components&, const Spell_Base_Element&,
-	 const Spell_Base_Element&, const Saving_Throw&,
-	 const Spell_Resistance&, const std::string&, const std::string&);*/
   virtual ~Spell();
 
   Spell_Element& operator[]( const Spell_Element_Token& );
 
-  void set_name( const Spell_String_Element& name )
+  void set_name( const Name& name )
     { name_ = name; };
   void set_name( const std::string& name)
     { name_ = Spell_String_Element( name ); };
@@ -299,7 +300,7 @@ public:
     { level_ = level; };
   void add_level( const std::string& level, const int value )
     { level_.add_level( level, value ); };
-  void set_casting_time( const Spell_Base_Element& casting_time )
+  void set_casting_time( const Casting_Time& casting_time )
     { casting_time_ = casting_time; };
   void set_components( const Components& components )
     { components_ = components; };
@@ -314,7 +315,7 @@ public:
     { components_.set_focus(value, description); };
   void set_component_divine_focus( const bool value )
     { components_.set_divine_focus(value); };
-  void set_range( const Spell_Base_Element& range )
+  void set_range( const Range& range )
     { range_ = range; };
   void set_duration( const Duration& duration )
     { duration_ = duration; };
@@ -322,8 +323,20 @@ public:
     { saving_throw_ = saving_throw; };
   void set_spell_resistance( const Spell_Resistance& spell_resistance )
     { spell_resistance_ = spell_resistance; };
-  void set_description( const Spell_String_Element& description )
+  void set_description( const Description& description )
     { description_ = description; };
+
+  Name get_name() const { return name_; };
+  School get_school() const { return school_; };
+  Level get_level() const { return level_; };
+  Casting_Time get_casting_time() const { return casting_time_; };
+  Components get_components() const { return components_; };
+  Range get_range() const { return range_; };
+  Duration get_duration() const { return duration_; };
+  Saving_Throw get_saving_throw() const { return saving_throw_; };
+  Spell_Resistance get_spell_resistance() const
+    { return spell_resistance_; };
+  Description get_description() const { return description_; };
 
   // doesn't realy work and is not necessary
   void add_element( const Spell_Element_Token&, const Spell_Element&);
@@ -336,16 +349,16 @@ private:
   std::map< Spell_Element_Token, Spell_Element* > elements_;
   void base_fill_elements_();
 
-  Spell_String_Element name_;
+  Name name_;
   School school_;
   Level level_;
-  Spell_Base_Element casting_time_;
+  Casting_Time casting_time_;
   Components components_;
-  Spell_Base_Element range_;
+  Range range_;
   Duration duration_;
   Saving_Throw saving_throw_;
   Spell_Resistance spell_resistance_;
-  Spell_String_Element description_;
+  Description description_;
   //Spell_String_Element link_;
 };
 
